--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>09 April 2000</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://mahammedfayez.github.io/MyPortfolio/</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span style="font-size: 0.8rem !important;"><a href="https://mahammedfayez.github.io/MyPortfolio">mahammedfayez.github.io/MyPortfolio</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+201151365757</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Cairo, EGYPT</span></li>
                 </ul>
