--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1><strong>Mohammed Fayez</strong></h1>
-      <p><strong>I'm <span class="typed" data-typed-items="Digital Markreter, Accountant, Freelancer"></span></strong></p>
+      <h1><b>Mohammed Fayez</b></h1>
+      <p><b>I'm <span class="typed" data-typed-items="Digital Markreter, Accountant, Freelancer"></span></b></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
